# yLib

./: .gitattributes  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CurrentVersionStr.txt  DependencesLists.txt  InstallAndUsages  InstallAndUsages.md  InstallAndUsages.txt  License.txt  ReadMe.md  ReleaseNotesTemplate.md  SupportedNotes.txt  TODO_LIST  VersionNotes  VersionNotes.md  VersionNotes.txt  a.out  build_deps.bat  build_deps.sh  build_deps_win.sh  download_third_part.ps1  generate_code_coverage_infos.sh  lgtm.yml
cmake/: FindyLibConfig.cmake.example  yLibConfig.cmake.example
cmakes/: commons.cmake  execute_test.cmake  options_and_vars.cmake
docs/: ConvertMangleStrToDemangleStr.txt  LinuxErrnoRef.txt  binary_analyze.txt  dbg_sum.txt  git_ref.txt  rules_table_for_ylib.txt  terminal.txt  vim_ref.txt  yLibDoxyCfgFile  yLibDoxyCfgFile_Gen_Notes.txt  ylib_abi_compatibility.txt
examples/: CMakeLists.txt  CMakeLists.txt.example  log4cplus.properties.example  test.conf  test.xml  test_yconfig.cpp  test_ycurl.cpp  test_yhttp.cpp  test_yjson.cpp  test_ylib_cmake_config_file.sh  test_ylog.cpp  test_ysharedmemory_r.cpp  test_ysharedmemory_w.cpp  test_yshell.cpp  test_ytemp.cpp  test_yxml.cpp
examples/MakefileExamples/: Makefile
examples/MakefileExamples/src/: Makefile
examples/MakefileExamples/src/lktcp/: Makefile
examples/MakefileExamples/src/tireddetect/: Makefile
examples/ProgramFrameExamples/: ymain.cpp  ystart.cpp  ystart.hpp
examples/ShellScriptExamples/: CreateCAndC++FileWithComment.sh  TerminateProcessOfName.sh  add-comment.sh  android_env_buld.sh  common.sh  init-c.sh  init-sh.sh
include/: TODO_LIST  ycommon.h  ycurl.h  ylib.h  ylib.hpp  ylib_c.h  ylog.h  yshell.h  yxml.h
java/: ReadMe.md
jni/: ReadMe.md
python/: ReadMe.md  com.sh  setup.py  test.py  ylib.cpp
src/: CMakeLists.txt  ybasicvalue.cpp  ycommon.cpp  yconfig.cpp  ycurl.cpp  yexception.cpp  yhttp.cpp  yjson.cpp  ylib_c.cpp  ylib_extra_infos.cpp.in  ylog.cpp  yobject.cpp  ysharedmemory.cpp  yshell.cpp  yxml.cpp
src/core/: ybasicvalue.cpp  ycommon.cpp  yexception.cpp  ylinuxerrnohelper.cpp  ylog.cpp  yobject.cpp  ysystemerrnohelper.cpp  ythreadpool.cpp
src/core/yCompiler/yFileBufferManager/: yfilebuffermanager.cpp
src/core/yCompiler/yLexicalAnalyzer/: ylexicalanalyzer.cpp
src/core/ycompiler/ast/: recursive_ast_visitor.cpp  yast_consumer.cpp  ydecl.cpp  ydecl_group.cpp
src/core/ycompiler/basic/: yaction.cpp  ycompiler_instance.cpp  ydiagnostics.cpp  yfile_location.cpp  yfile_manager.cpp  ymemory_buffer.cpp  yregularengine.cpp  ysource_manager.cpp  ytoken.cpp
src/core/ycompiler/core/: yfilebuffermanager.cpp  yregularengine.cpp
src/core/ycompiler/frontend/: ycompiler_instance.cpp  ycompiler_invocation_helper.cpp  yfrontend_action.cpp
src/core/ycompiler/lex/: ylexer.cpp
src/core/ycompiler/lexer/: ylexer.cpp  yliteral_support.cpp  ytoken.cpp
src/core/ycompiler/lexical_analyzer/: ylexicalanalyzer.cpp
src/core/ycompiler/parse/: yconfig_parser.cpp
src/core/ycompiler/parser/: yconfig_parser.cpp  yconfig_parser_decl.cpp  yconfig_parser_expr.cpp  yconfig_parser_stmt.cpp
src/core/ycompiler/sema/: ysema.cpp  ysema_expr.cpp
src/core/ycompiler/syntactic_analyzer/: ysyntacticanalyzer.cpp
src/core/ycompiler/tools/: yconfig_parse_action.cpp  yutils.cpp
src/ipc/: ysharedmemory.cpp
src/network/: yabstractsocket.cpp  yabstractsocketserver.cpp  ytcpserver.cpp  ytcpsocket.cpp  yudpserver.cpp  yudpsocket.cpp
src/utility/: yconfig.cpp  ycurl.cpp  yhttp.cpp  yjson.cpp  ylog.cpp  yshell.cpp  ytimer.cpp  yxml.cpp
tests/: CMakeLists.txt  run_multi_process.sh  scripts_for_all_tests.sh  scripts_for_tests.bat  scripts_for_tests.sh  test_common.hpp  test_main.cpp  test_unit_main.cpp
tests/Catch2/: catch2_notes.txt
tests/Catch2/inc/catch2/: catch.hpp
tests/all_in_one/: all_in_one_tests.cpp
tests/basic_algorithm/: ylinearlist_tests.cpp  ylinkedlist_tests.cpp  yqueue_tests.cpp  ysequencelist_tests.cpp  ystack_tests.cpp  ytest_element_data.cpp
tests/core/yallocator/: yallocator_tests.cpp
tests/core/ybasicvalue/: ybasicvalue_tests.cpp
tests/core/ycommon/: ycommon_tests.cpp
tests/core/yexception/: yexception_tests.cpp
tests/core/ylib_extra_infos/: ylib_extra_infos_tests.cpp
tests/core/ylog/: ylog_capi_tests.cpp  ylog_tests.cpp
tests/core/yobject/: yobject_tests.cpp
tests/core/ythreadpool/: ythreadpool_tests.cpp
tests/ipc/ysharedmemory/: ysharedmemory_r_tests.cpp  ysharedmemory_tests.cpp  ysharedmemory_w_tests.cpp
tests/network/: test_tcp_client.cpp  test_udp_client.cpp  test_udp_server.cpp
tests/network/tcp/: test_tcp_server.cpp  ytcpclient_tests.cpp  ytcpserver_tests.cpp
tests/network/udp/: yudpclient_tests.cpp  yudpserver_tests.cpp
tests/tmp/: tmp_tests.cpp
tests/utility/yconfig/: test.conf.example  test_fail.conf.example  yconfig_tests.cpp
tests/utility/yhttp/: yhttp_tests.cpp
tests/utility/yjson/: test.json.example  yjson_tests.cpp
tests/utility/ylog/: log4cplus.properties.example  ylog_file_bakup_tests.cpp  ylog_tests.cpp  ylog_verify_tests.cpp
tests/utility/yshell/: yshell_tests.cpp
tests/utility/ytimer/: ytimer_tests.cpp
tests/utility/yxml/: test.xml.example  yxml_tests.cpp
tests/ybasicvalue/: ybasicvalue_tests.cpp
tests/ycommon/: ycommon_tests.cpp
tests/yconfig/: test.conf.example  yconfig_tests.cpp
tests/yexception/: yexception_tests.cpp
tests/yhttp/: yhttp_tests.cpp
tests/yjson/: test.json.example  yjson_tests.cpp
tests/ylog/: ylog_tests.cpp
tests/yobject/: yobject_tests.cpp
tests/ysharedmemory/: ysharedmemory_tests.cpp
tests/yshell/: shell_test.txt.example  yshell_tests.cpp
tests/yxml/: yxml_tests.cpp
third_part/: CMakeLists.txt  CMakeLists_Unix.cmake  CMakeLists_Win.cmake  ReadMe.md  build_third_part.bat  build_third_part.sh  curl-7.55.1.md5  f.ps1  f.sh  install_libxml_win.ps1  jsoncpp_1.8.4.md5  libconfig_cmake.patch  libxml2-2.9.9.md5  log4cpp-1.1.3.md5
toolchains/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnu.toolchain.cmake  linux_aarch64_gcc.cmake  linux_armgnueabi_gcc.cmake  linux_x64_clang.cmake  (+4 more)
(+223 files in other folders)
